[gd_scene load_steps=22 format=3 uid="uid://f3dbskfgovd2"]

[ext_resource type="Script" path="res://entities/proyectiles/fly_eyes_corrupted_proyectile.gd" id="1_8gvjm"]
[ext_resource type="Texture2D" uid="uid://bgma0jolicitb" path="res://images/Monsters_Creatures_Fantasy/Flying eye/proyectil_fly_eye_corrupted.png" id="2_gko1g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vd4ij"]
atlas = ExtResource("2_gko1g")
region = Rect2(2100, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_bu0ug"]
atlas = ExtResource("2_gko1g")
region = Rect2(1800, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_htw1q"]
atlas = ExtResource("2_gko1g")
region = Rect2(1500, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gmww"]
atlas = ExtResource("2_gko1g")
region = Rect2(1200, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_vklm1"]
atlas = ExtResource("2_gko1g")
region = Rect2(900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_3l5md"]
atlas = ExtResource("2_gko1g")
region = Rect2(600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ib3bu"]
atlas = ExtResource("2_gko1g")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_0d3ni"]
atlas = ExtResource("2_gko1g")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ack4c"]
atlas = ExtResource("2_gko1g")
region = Rect2(2100, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ksvs"]
atlas = ExtResource("2_gko1g")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uy56"]
atlas = ExtResource("2_gko1g")
region = Rect2(300, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhg5s"]
atlas = ExtResource("2_gko1g")
region = Rect2(600, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rslp"]
atlas = ExtResource("2_gko1g")
region = Rect2(900, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_fbjm2"]
atlas = ExtResource("2_gko1g")
region = Rect2(1200, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_eiqxe"]
atlas = ExtResource("2_gko1g")
region = Rect2(1500, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i3pa"]
atlas = ExtResource("2_gko1g")
region = Rect2(1800, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_evrkt"]
atlas = ExtResource("2_gko1g")
region = Rect2(2100, 0, 300, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_eanfy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd4ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bu0ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htw1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gmww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vklm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3l5md")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ib3bu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0d3ni")
}],
"loop": false,
"name": &"destroy",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ack4c")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ksvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uy56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhg5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rslp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fbjm2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eiqxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i3pa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evrkt")
}],
"loop": false,
"name": &"in",
"speed": 16.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0ffih"]
radius = 32.0156

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 0
collision_mask = 3
gravity_scale = 0.0
script = ExtResource("1_8gvjm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_eanfy")
animation = &"fly"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0ffih")
debug_color = Color(0.964706, 0, 0, 0.184314)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
